# webpage-components

./: .gitattributes  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml  python-publish.yml  python-test.yml  python-update.yml  python-version.yml  python_publish.yml
webpage_components/: __init__.py  display_attributes.py  display_basic.py  display_images.py  display_measurement.py  display_measurements.py  display_prices.py  display_rating.py  display_segments.py  display_weight.py  search_bar.py  search_info.py  search_info_bar.py  utility.py
