[project]
name = "webpage-components"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "thiagola92", email = "thiagola92@gmail.com"},
]
dependencies = [
    "streamlit==1.13.0",
    "text-utility @ git+https://github.com/la-catalog/text-utility",
]

[project.urls]
repository = "https://github.com/la-catalog/webpage-components"

[project.optional-dependencies]
[tool.pdm]

[tool.pdm.scripts]
unittest = "python -m unittest discover -v -f -s tests"
black = "python -m black ."
isort = "python -m isort -v --ac ."

[tool.pdm.dev-dependencies]
lint = [
    "black==22.8.0",
    "isort==5.10.1",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

# [[tool.pdm.source]]
# url = "https://private-site.org/pypi/simple"
# verify_ssl = false
# name = "lacatalog"